syntax = "proto3";
package proto.hello.v1;
option go_package = "github.com/cao7113/hellogolang/proto/gosdk/hellov1";

service HelloService {
  rpc Hello (HelloRequest) returns (HelloResponse);
  rpc Try(TryRequest) returns (TryResponse);
  rpc TryContext (TryContextRequest) returns (TryContextResponse);
  rpc TryTimeout(TryTimeoutRequest) returns (TryTimeoutResponse);
  rpc Slow (SlowRequest) returns (SlowResponse);
}

message HelloRequest {
  string name = 1;
  string error = 2;
}

message HelloResponse {
  string message = 1;
}

message TryRequest {
  string name = 1;
  uint32 score = 2;
  oneof gender {
    bool male = 3;
    bool female = 4;
  }
}

message TryResponse {
  string message = 1;
}

message Error {
  int64 code = 1;
  string message = 2;
}

message TryContextRequest {
  string from = 1;
}

message TryContextResponse {
  string msg = 1;
}

message TryTimeoutRequest {
  uint32 timeout_in_ms = 1;
}

message TryTimeoutResponse {
  string msg = 1;
}

message SlowRequest {
  uint32 seconds = 1;
}

message SlowResponse {
  string msg = 1;
}